objects/tffa__AddOnService__c.object
<CustomObject>
    <description>Financial services offered on top of product(s). These cannot be standalone.
Examples are Safe Deposit Boxes, Bounce Protection, Online Banking, Direct Deposit</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__CardBINCode__c</fullName>
        <description>Bank Identification Number (“BIN”) or Issuer identification number (“IIN”) is the first six digits of a bank card number or payment cards number and it is part of ISO/IEC 7812.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Bank Identification Number (“BIN”) or Issuer identification number (“IIN”) is beneficial to identify a card brand, issuing institution or bank, country of issuance, card type and category of cards.</inlineHelpText>
        <label>Card BIN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique identifier for the service.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the add-on service.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes the add-on service unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EntityType__c</fullName>
        <defaultValue>&quot;APPLICATION&quot;</defaultValue>
        <description>Add-on service is associated with an application. Entity type further defines the level (in the application) at which the add-on service applies. e.g. Online banking applies at party level in the application, Overdraft protection applies at application level, etc.</description>
        <label>Applicable to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FullDescription__c</fullName>
        <description>A comprehensive description enumerating key features about the add on service</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__GroupCode__c</fullName>
        <description>Unique group code of the add-on service. Used for grouping same typed add-on services. e.g. add-on services of type can be grouped on the basis of HANDHELD_SCANNER, CASH_DRAWER, RECEIPT_PRINTER, etc. By default add-on services are grouped by type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__GroupName__c</fullName>
        <description>Name of the group to which the add-on service belongs. Used with group code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IconClass__c</fullName>
        <description>Style classes for rendering an icon describing (the nature of) the service.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ImageLink__c</fullName>
        <description>Location of image describing the add-on service as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Image URL(Deprecated)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__ImageName__c</fullName>
        <description>Name of image file. Used for resolving the image location from Documents Images folder</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Image name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ImageUrl__c</fullName>
        <description>Location of image describing the add on service as a url</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__InfoUrl__c</fullName>
        <description>An external link to additional information about the service. Typically appears as a KnowMore link.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaxNumberOfUnits__c</fullName>
        <description>Maximum number of units that can be applied as part of additional services</description>
        <label>Max Number Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRoleSet__c</fullName>
        <description>Roles (any one) that a party must have to be eligible for the service.</description>
        <label>Party role (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Captures the type of Add on service offered as part of the application.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddOnServiceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UnitPrice__c</fullName>
        <description>Price of each unit of additional service or device</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Add On Service</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__CardBINCode__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add On Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>